--- a/test1.html
+++ b/test1.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>
-            Pre Intern For Web
+            Pre_intern For Web
         </title>
     </head>
     <body>
-        Hello !Welcome to our group.
+        Hello from our page.
     </body>
 </html>
