Added third line

--- a/test1.html
+++ b/test1.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         Hello !Welcome to our group.
-        Hello from third line(AnoDEv).
+        Added third line.
     </body>
 </html>
