--- a/testbranch.html
+++ b/testbranch.html
@@ -6,5 +6,7 @@
     <body>
         <h2>Master branch</h2>
         This is master branch.
+        <h3>New feature1</h3>
+        This is new feature1.
     </body>
 </html>
