--- a/table.html
+++ b/table.html
@@ -2,6 +2,17 @@
 <html>
     <head>
         <title>Table Test</title>
+        <style>
+            table{
+                border: rgb(131, 194, 15) solid 2px;
+                border-collapse: collapse;
+            }
+            th,td{
+                border: red solid;
+               
+            }
+           
+        </style>
     </head>
     <body>
         <table>
